complete/k8-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fm-webapp-ser
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    name: fm-eval-rr
